Fix right arrow visibility in sources sidebar

--- a/less/_animations.less
+++ b/less/_animations.less
@@ -169,6 +169,7 @@
 
 	.arrow-animations-right() {
 		-webkit-transform: rotate(0deg);
+		-webkit-mask-position: -4px -96px !important;
 	}
 
 	.arrow-animations-down() {
